--- a/ratchet_and_clank_mod/config.cfg
+++ b/ratchet_and_clank_mod/config.cfg
@@ -32,8 +32,8 @@ bind e "use environment suit"
 bind g "use grenades"
 bind h "wave 0"
 bind i "use invulnerability"
-bind j "wave 1"
-bind k "wave 2"
+bind j "charge_boots"
+bind k "thrust"
 bind l "wave 3"
 bind p "use power shield"
 bind q "use quad damage"
@@ -94,11 +94,11 @@ set s_primary "0"
 set s_mixahead "0.2"
 set s_loadas8bit "0"
 set s_khz "22"
-set s_volume "0.7"
+set s_volume "0.400000"
 set sw_stipplealpha "0"
 set vid_gamma "1"
-set vid_ypos "79"
-set vid_xpos "452"
+set vid_ypos "1"
+set vid_xpos "148"
 set vid_ref "soft"
 set sv_reconnect_limit "3"
 set allow_download_maps "1"
@@ -108,7 +108,7 @@ set allow_download_players "0"
 set allow_download "1"
 set hostname "noname"
 set sw_allow_modex "1"
-set sw_mode "3"
+set sw_mode "6"
 set skin "male/grunt"
 set name "Player"
 set lookstrafe "0"
